<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.habitrpg.android.habitica.ui.activities.FixCharacterValuesActivity"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/brand_300"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/Toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_large">

                <LinearLayout
                    android:id="@+id/upper_text_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingEnd="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    tools:background="@color/brand_300">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TaskFormTextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/text_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_title"
                            android:inputType="textCapSentences|textAutoCorrect" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TaskFormTextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/notes_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/notes"
                            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                            android:minLines="3" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:orientation="vertical">

                    <com.habitrpg.android.habitica.ui.views.tasks.form.HabitScoringButtonsView
                        android:id="@+id/habit_scoring_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/reward_value_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cost" />

                    <com.habitrpg.android.habitica.ui.views.tasks.form.RewardValueFormView
                        android:id="@+id/reward_value"
                        android:layout_width="match_parent"
                        android:layout_height="56dp" />

                    <TextView
                        android:id="@+id/checklist_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/checklist" />

                    <com.habitrpg.android.habitica.ui.views.tasks.form.ChecklistContainer
                        android:id="@+id/checklist_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/task_difficulty_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty" />

                    <com.habitrpg.android.habitica.ui.views.tasks.form.TaskDifficultyButtons
                        android:id="@+id/task_difficulty_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/habit_reset_streak_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_streak" />

                    <com.habitrpg.android.habitica.ui.views.tasks.form.HabitResetStreakButtons
                        android:id="@+id/habit_reset_streak_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/scheduling_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scheduling" />

                    <com.habitrpg.android.habitica.ui.views.tasks.form.TaskSchedulingControls
                        android:id="@+id/scheduling_controls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/adjust_streak_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adjust_streak" />

                    <LinearLayout
                        android:id="@+id/adjust_streak_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutAppearance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/habit_adjust_positive_streak"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/positive_habit_form"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Space
                            android:layout_width="22dp"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutAppearance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/habit_adjust_negative_streak"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/negative_habit_form"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/reminders_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reminders" />

                    <com.habitrpg.android.habitica.ui.views.tasks.form.ReminderContainer
                        android:id="@+id/reminders_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/stat_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TaskFormSectionheader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/assigned_stat" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_large">

                            <TextView
                                android:id="@+id/stat_strength_button"
                                style="@style/TaskFormToggle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/spacing_large"
                                android:layout_weight="1"
                                android:text="@string/strength" />

                            <TextView
                                android:id="@+id/stat_constitution_button"
                                style="@style/TaskFormToggle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/constitution" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/stat_intelligence_button"
                                style="@style/TaskFormToggle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/spacing_large"
                                android:layout_weight="1"
                                android:text="@string/intelligence" />

                            <TextView
                                android:id="@+id/stat_perception_button"
                                style="@style/TaskFormToggle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/perception" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tags_title"
                        style="@style/TaskFormSectionheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tags" />

                    <LinearLayout
                        android:id="@+id/tags_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@drawable/tag_divider"
                        android:orientation="vertical"
                        android:showDividers="middle" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>